ensure we don't think we're doing autocomplete when the url changes and the toolbar is hidden, causing it not to update at all (bug 237803)